Add comment lines to index

--- a/index.html
+++ b/index.html
@@ -609,9 +609,9 @@
     </div>
     <!-- Categories - End -->
 
-    <!-- STORY SECTION BEGIN -->
-
+    <!-- Stories - Start -->
     <div class="container stories">
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/2021/6/28/FirsatURuNleri200X2001_202106281336.png"
@@ -619,6 +619,8 @@
                 <span class="story-text">Tüm Ürünler</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/2021/6/28/SecIliURuNler200X2001_202106281336.png"
@@ -626,6 +628,8 @@
                 <span class="story-text">Kaçırma!</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15551619355300_SanaOzel.png"
@@ -633,6 +637,8 @@
                 <span class="story-text">Sana Özel</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15551619355311_SenDeAl.png"
@@ -640,6 +646,8 @@
                 <span class="story-text">Sen de Al!</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/2020/12/30/EglenceWeb_202012301831.png"
@@ -647,6 +655,8 @@
                 <span class="story-text">Kodlar & Hizmetler</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15521619355152_Mango.png"
@@ -654,6 +664,8 @@
                 <span class="story-text">Mango</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15521619355157_Mavi.png"
@@ -661,6 +673,8 @@
                 <span class="story-text">Mavi</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/5/24/20210524_17061621865162_Pullbear.png"
@@ -668,6 +682,8 @@
                 <span class="story-text">Pull & Bear</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15541619355245_Penti.png"
@@ -675,6 +691,8 @@
                 <span class="story-text">Penti</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15511619355115_Koton.png"
@@ -682,6 +700,8 @@
                 <span class="story-text">Koton</span>
             </a>
         </div>
+        <!-- Story - End -->
+        <!-- Story - Start -->
         <div class="story">
             <a href="">
                 <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15471619354848_Avva.png"
@@ -689,17 +709,19 @@
                 <span class="story-text">Avva</span>
             </a>
         </div>
+        <!-- Story - End -->
     </div>
-    <!-- STORY SECTION ENDS -->
-    <!-- COMPONENT BANNER SECTION STARTS -->
-
+    <!-- Stories - End -->
+    <!-- Component Banner Container - Start -->
     <main class="container component-banner-container">
-        <!-- Components Start -->
+        <!-- Components - Start -->
         <section class="components">
+            <!-- Component - Start -->
             <div class="component">
                 <a href="" class="component-link">
                     <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/2021/6/28/WebBanner_202106281352.gif"
                         alt="Flaş Ürünler" class="component-img">
+                    <!-- Component Description - Start -->
                     <div class="component-description">
                         <span class="component-text">
                             Flaş Ürünler
@@ -714,12 +736,16 @@
                             </svg>
                         </span>
                     </div>
+                    <!-- Component Description - End -->
                 </a>
             </div>
+            <!-- Component - End -->
+            <!-- Component - Start -->
             <div class="component">
                 <a href="" class="component-link">
                     <img src="https://cdn.dsmcdn.com/ty139/campaign/banners/original/572758/03c9a9dde2_2_new.jpg"
                         alt="TRENDYOLMİLLA&TRENDYOL MAN&TRENDYOL MODEST - Yeni Sezonda Fırsatlar" class="component-img">
+                    <!-- Component Description - Start -->
                     <div class="component-description">
                         <span class="component-text">
                             TRENDYOLMİLLA&TRENDYOL MAN&TRENDYOL MODEST - Yeni Sezonda Fırsatlar
@@ -734,12 +760,16 @@
                             </svg>
                         </span>
                     </div>
+                    <!-- Component Description - End -->
                 </a>
             </div>
+            <!-- Component - End -->
+            <!-- Component - Start -->
             <div class="component">
                 <a href="" class="component-link">
                     <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/BrandBoutique/2021/6/29/1510CilginFiyatlar_section1_202106291230_webBig.jpg"
                         alt="1-5-10 Çılgın Fiyatlar" class="component-img">
+                    <!-- Component Description - Start -->
                     <div class="component-description">
                         <span class="component-text">
                             1-5-10 Çılgın Fiyatlar
@@ -754,12 +784,16 @@
                             </svg>
                         </span>
                     </div>
+                    <!-- Component Description - End -->
                 </a>
             </div>
+            <!-- Component - End -->
+            <!-- Component - Start -->
             <div class="component">
                 <a href="" class="component-link">
                     <img src="https://cdn.dsmcdn.com/ty135/campaign/banners/original/573408/1d8a1ff34c_0_new.jpg"
                         alt="TRENDYOLMİLLA&TRENDYOL MAN&TRENDYOL MODEST - Yeni Sezon" class="component-img">
+                    <!-- Component Description - Start -->
                     <div class="component-description">
                         <span class="component-text">
                             TRENDYOLMİLLA&TRENDYOL MAN&TRENDYOL MODEST - Yeni Sezon
@@ -774,12 +808,16 @@
                             </svg>
                         </span>
                     </div>
+                    <!-- Component Description - End -->
                 </a>
             </div>
+            <!-- Component - End -->
+            <!-- Component - Start -->
             <div class="component">
                 <a href="" class="component-link">
                     <img src="https://cdn.dsmcdn.com/ty139/pimWidgetApi/webBig_20210630123543_enbegenilenler300621web.jpg"
                         alt="En Beğenilenler Kadın & Çocuk Giyim" class="component-img">
+                    <!-- Component Description - Start -->
                     <div class="component-description">
                         <span class="component-text">
                             En Beğenilenler Kadın & Çocuk Giyim
@@ -794,12 +832,15 @@
                             </svg>
                         </span>
                     </div>
+                    <!-- Component Description - End -->
                 </a>
             </div>
+            <!-- Component - End -->
         </section>
-        <!-- Components End -->
-        <!-- Banners Start -->
+        <!-- Components - End -->
+        <!-- Banners - Start -->
         <aside class="banners">
+            <!-- Banner - Start -->
             <div class="banner">
                 <a href="">
                     <img src="https://cdn.dsmcdn.com/ty135/product/media/images/20210624/14/103944201/80847148/1/1_org.jpg"
@@ -812,6 +853,8 @@
                     </span>
                 </a>
             </div>
+            <!-- Banner - End -->
+            <!-- Banner - Start -->
             <div class="banner">
                 <a href="">
                     <img src="https://cdn.dsmcdn.com/ty80/product/media/images/20210309/12/70136996/21115196/2/2_org.jpg"
@@ -825,6 +868,8 @@
                     </span>
                 </a>
             </div>
+            <!-- Banner - End -->
+            <!-- Banner - Start -->
             <div class="banner">
                 <a href="">
                     <img src="https://cdn.dsmcdn.com/ty31/product/media/images/20210401/12/76941935/159513058/1/1_org.jpg"
@@ -837,6 +882,8 @@
                     </span>
                 </a>
             </div>
+            <!-- Banner - End -->
+            <!-- Banner - Start -->
             <div class="banner">
                 <a href="">
                     <img src="https://cdn.dsmcdn.com/ty117/product/media/images/20210524/18/91224890/163723264/1/1_org.jpg"
@@ -849,10 +896,10 @@
                     </span>
                 </a>
             </div>
+            <!-- Banner - End -->
         </aside>
+        <!-- Banners - End -->
     </main>
-    <!-- Banner Ends -->
-    <!-- COMPONENT BANNER SECTION ENDS -->
+    <!-- Component Banner Container - End -->
 </body>
-
 </html>
